# AOS-experiments

./: AOS_API_request_examples.postman_collection.json  README.md
AdditionalExamples/Bp/: BP_Toy.Navigate glue.json  BP_Toy.Navigate.json  BP_Toy.environment.json  BP_Toy.push glue.json  BP_Toy.push.json  printState
AdditionalExamples/Bp model for sarsop/: BP_Toy.Navigate.json  BP_Toy.environment.json  BP_Toy.push glue.json  BP_Toy.push.json  printState  temp
AdditionalExamples/Bp model with integers/: BP_Toy.Navigate glue.json  BP_Toy.Navigate.json  BP_Toy.environment.json  BP_Toy.push glue.json  BP_Toy.push.json  printState
AdditionalExamples/Real Armadillo- Clean Lab/: cleanLabRealRobot.enhanced_pick.json  cleanLabRealRobot.enhanced_pick.release_can glue.json  cleanLabRealRobot.enhanced_pick_glue.json  cleanLabRealRobot.environment glue.json  cleanLabRealRobot.environment.json  cleanLabRealRobot.navigate glue.json  cleanLabRealRobot.navigate.json  cleanLabRealRobot.observe glue.json  cleanLabRealRobot.observe.json  (+1 more)
The paper example/: aosPaper.Navigate glue.json  aosPaper.Navigate.json  aosPaper.environment.json  turtleBotVisitLocationsPO_Noisy.Navigate glue.json  turtleBotVisitLocationsPO_Noisy.Navigate.json  turtleBotVisitLocationsPO_Noisy.environment.json
The paper new example/: example.ef  navigate.am  navigate.sd
The paper new example different order/: navigate.am
Tutorial/: AOS Tutorial.postman_collection.json
armadillo pick/: readme.md
armadillo_pick/: readme.md
panda_tic_tac_toe/panda_tic_tac_toe_original/panda_demo/: CMakeLists.txt
(+297 files in other folders)
